Break to single column for small screen widths

--- a/source/stylesheets/application.sass
+++ b/source/stylesheets/application.sass
@@ -49,6 +49,9 @@ section
     padding: 60px 30px 30px 30px
     background: $bg
     +box-shadow(none)
+  +max-width(730)
+    float: none
+    width: auto
 
 header
   padding: 50px 12.5% 30px 12.5%
