Setup Middleman build config

--- a/source/stylesheets/application.sass
+++ b/source/stylesheets/application.sass
@@ -93,7 +93,7 @@ aside
         margin: 0 8px 0 0
         vertical-align: -4px
         content: ""
-        background: transparent url("/images/masks.png") 0 0 no-repeat
+        background: transparent image-url("masks.png") 0 0 no-repeat
   > a
     display: inline-block
     padding: 2px 10px 2px 2px
@@ -107,7 +107,7 @@ aside
       margin: 0 8px 0 0
       vertical-align: -7px
       content: ""
-      background: transparent url("/images/masks.png") 0 -16px no-repeat
+      background: transparent image-url("masks.png") 0 -16px no-repeat
 
 article
   padding: 35px 12.5%
@@ -152,7 +152,7 @@ form
         margin: 0 10px 0 0
         vertical-align: -8px
         content: ""
-        background: $version url("/images/masks.png") 0 100% no-repeat
+        background: $version image-url("masks.png") 0 100% no-repeat
     a
       display: inline-block
       width: 58px
