Add html5 support for IE, device width set

--- a/source/layouts/layout.haml
+++ b/source/layouts/layout.haml
@@ -3,6 +3,7 @@
   %head
     %meta(charset="utf-8")
     %title jQuery Remember State | Remember and Restore Form State Using localStorage
+    %meta(name="viewport" content="width=device-width, initial-scale=1")
     = stylesheet_link_tag "application"
     = javascript_include_tag  "jquery", "jquery.remember-state"
     = yield_content :head
